# darwinbox-hr-ops-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml
agents/: action_agent.py  anomaly_agent.py  anomaly_models.py  anomaly_scoring.py  bandit_agent.py  compliance_agent.py  demo.py  graph.py  hitl_agent.py  policy_agent.py  state.py  supervisor.py
bandit/: cycle_results.json  diagnostics_report.txt  ground_truth.py  hitl_feedback.py  policy.py  policy_state.json  reward.py  simulate_human.py  test_persistence.py  train_cycles.py
compliance/: rules.yaml  rules_engine.py
data/: employees.csv  generate_employees.py
eval/: cost_analysis.json  cost_tracking.py  eval_results.json  test_cases.py
hitl/: app.py  models.py  store.py
memory/: demo_warm_start.py  embeddings.py  store.py  warm_start.py
policies/: chunking.py  hr_policy.md  rag.py  retrieval.py
tools/: mock_tools.py  schemas.py
