[project]
name = "darwinbox-technicalscreen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
